Removed .rds files, these can be too heavy

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # Session Data files
 .RData
 
+# Session Data files
+.rds #heavy stan compilation files
+
 # Example code in package build process
 *-Ex.R
 
